--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1",
+    "twilio": "^4.18.1",
     "uuid": "^9.0.1"
   }
 }
